@@ -1,3 +1,8 @@
+2008-10-19  Paul Thomas  <pault@gcc.gnu.org>
+
+        PR fortran/37723
+        * gfortran.dg/dependency_22.f90: New test.
+
 2008-10-18  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* gcc.dg/dll-2.c: Revert 2008-08-09 change (R138893): Change
